--- a/paginaPrincipal/site.html
+++ b/paginaPrincipal/site.html
@@ -9,6 +9,11 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="./css/header.css">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/opcoes.css">
+    <link rel="stylesheet" type="text/css" href="./css/loja.css">
+    <link rel="stylesheet" type="text/css" href="./css/cadastro.css">
+    <link rel="stylesheet" type="text/css" href="./css/foodlover.css">
+    <link rel="stylesheet" type="text/css" href="./css/footer.css">
 </head>
 
 <body>
@@ -56,7 +61,234 @@
                 <button class="botao-buscar">Ver mercados próximos</button>
             </div>
         </section>
+
+        <section class="opcoes-pedido">
+            <div id="parte1">
+                <button class="itens-pedido">
+                    <h2>Frios</h2>
+                </button>
+                <button class="itens-pedido">
+                    <h2>Laticínios</h2>
+                </button>
+                <button class="itens-pedido">
+                    <h2>Feira</h2>
+                </button>
+                <button class="itens-pedido">
+                    <h2>Bebidas</h2>
+                </button>
+                <button class="itens-pedido">
+                    <h2>Doces</h2>
+                </button>
+                <button class="itens-pedido">
+                    <h2>Massas frescas</h2>
+                </button>
+                <button class="itens-pedido">
+                    <h2>Limpeza</h2>
+                </button>
+            </div>
+            <div id="parte2">
+                <button class="itens-pedido">
+                    <h2>Padaria</h2>
+                </button>
+                <button class="itens-pedido">
+                    <h2>Higiene</h2>
+                </button>
+                <button class="itens-pedido">
+                    <h2>Congelados</h2>
+                </button>
+                <button class="itens-pedido">
+                    <h2>Carnes</h2>
+                </button>
+                <button class="itens-pedido">
+                    <h2>Cerveja</h2>
+                </button>
+            </div>
+        </section>
+
+        <section class="opcoes">
+            <div class="container-opcoes">
+                <div class="cards-opcoes">
+                    <a href="#" class="card-opcao">
+                        <h2>Restaurante</h2>
+                        <button>Ver opções &gt;</button>
+                        <img src="./assets/hamburguer.png" alt="Imagem de um Hamburguer">
+                    </a>
+                    <a href="#" class="card-opcao">
+                        <h2>Mercado</h2>
+                        <button>Buscar lojas &gt;</button>
+                        <img src="./assets/carrinho.png" alt="Imagem de um carrinho de compras de mercado">
+                    </a>
+                </div>
+                <div class="mini-cards-opcoes">
+                    <a href="#" class="mini-card">
+                        <figure>
+                            <img src="./assets/drinks.png" alt="Imagem de bebidas">
+                        </figure>
+                        <span>Bebidas</span>
+                    </a>
+                    <a href="#" class="mini-card">
+                        <figure>
+                            <img src="./assets/farmacia.png" alt="Imagem de item farmaceutico">
+                        </figure>
+                        <span>Farmácia</span>
+                    </a>
+                    <a href="#" class="mini-card">
+                        <figure>
+                            <img src="./assets/petshop.png" alt="Imagem de pote de ração">
+                        </figure>
+                        <span>Pet shop</span>
+                    </a>
+                </div>
+            </div>
+            <div class="separador"></div>
+        </section>
+
+        <section class="lojas">
+            <h1>Os melhores restaurantes</h1>
+            <div id="propagandas">
+                <a class="lojas-prop" href="#">
+                    <img src="./assets/mcdonalds.jpg" alt="Logo MacDonald's" width="50" height="50">
+                    <h3>Mcdonald's</h3>
+                    <p>Lanches</p>
+                    <img class="correct" src="./assets/correct.png" alt="Icone check" width="15" height="15">
+                </a>
+                <a class="lojas-prop" href="#">
+                    <img src="./assets/cocobambu.png" alt="Logo MacDonald's" width="50" height="50">
+                    <h3>Coco Bambu</h3>
+                    <p>Frutos do Mar</p>
+                    <img class="correct" src="./assets/correct.png" alt="Icone check" width="15" height="15">
+                </a>
+                <a class="lojas-prop" href="#">
+                    <img src="./assets/chinainbox.png" alt="Logo MacDonald's" width="50" height="50">
+                    <h3>China in Box</h3>
+                    <p>Chinesa</p>
+                    <img class="correct" src="./assets/correct.png" alt="Icone check" width="15" height="15">
+                </a>
+                <a class="lojas-prop" href="#">
+                    <img src="./assets/habibs.jpg" alt="Logo MacDonald's" width="50" height="50">
+                    <h3>Habib's</h3>
+                    <p>Lanches</p>
+                    <img class="correct" src="./assets/correct.png" alt="Icone check" width="15" height="15">
+                </a>
+                <a class="lojas-prop" href="#">
+                    <img src="./assets/outback.png" alt="Logo MacDonald's" width="50" height="50">
+                    <h3>Outback Steakhouse</h3>
+                    <p>Lanches</p>
+                    <img class="correct" src="./assets/correct.png" alt="Icone check" width="15" height="15">
+                </a>
+            </div>
+            <div>
+                <img src="./assets/banner1.png" alt="Comida a partir de 10 reais">
+                <img src="./assets/banner2.png" alt="Comida com até 70% de desconto">
+                <img src="./assets/banner3.png" alt="Super restaurantes">
+            </div>
+            <div class="separador"></div>
+        </section>
+
+        <section id="secad">
+            <h1 id="bestmarket">Os melhores mercados</h1>
+            <div id="mercados">
+                <a class="mercado" href="#">
+                    <img src="./assets/diasupermercado.jpeg" alt="Logo Dia Supermercado" width="50" height="50">
+                    <h3>Dia Supermercado</h3>
+                </a>
+                <a class="mercado" href="#">
+                    <img src="./assets/big.png" alt="Logo Big" width="50" height="50">
+                    <h3>Big</h3>
+                </a>
+                <a class="mercado" href="#">
+                    <img src="./assets/eataly.jpg" alt="Logo Eataly" width="50" height="50">
+                    <h3>Eataly</h3>
+                </a>
+            </div>
+            <div class="cadastros">
+                <div class="cadastro">
+                    <img src="./assets/background.svg" alt="Fundo Rosa">
+                    <article>
+                        <h2>Quer fazer entregas pelo iFood?</h2>
+                        <p>Faça agora o seu cadastro e comece o quanto antes.</p>
+                        <a href="#"><button>Saiba mais</button></a>
+                    </article>
+                    <img class="imgfood" src="./assets/deliveryman.svg"
+                        alt="Imagem de uma mulher segurando um capacete">
+                </div>
+                <div class="cadastro">
+                    <img src="./assets/background.svg" alt="Fundo Rosa">
+                    <article>
+                        <h2>A sua fome de crescer ta no iFood</h2>
+                        <p>Cadastre seu restaurante ou o seu mercado</p>
+                        <a href="#"><button>Saiba mais</button></a>
+                    </article>
+                    <img class="imgfood" src="./assets/store.svg" alt="Imagem de uma loja">
+                </div>
+            </div>
+            <div class="separador"></div>
+        </section>
+
+        <section class="foodlover">
+            <article>
+                <h2>Você tem fome do quê?</h2>
+                <p>Descubra como é ser um FoodLover e faça parte da nossa revolução!</p>
+                <a href="#"><button>Saiba mais</button></a>
+            </article>
+            <img src="./assets/foodloverbanner.jpg" alt="Pessoas amantes de iFood">
+        </section>
+
+        <div class="beneficios-banner">
+            <a id="naoresp" href="#"><img src="./assets/beneficios.png" alt="Benefício Vale"></a>
+            <a id="resp"href="#"><img src="./assets/beneficiosresponsivo.png" alt="Benefício Vale"></a>
+        </div>
+
+        <div id="strongborda"></div>
     </main>
+
+    <footer class="rodape">
+        <section class="rodape-sobre">
+            <ul>
+                <li><strong>iFood</strong></li>
+                <li><a href="#">Site Institucional</a>
+                </li>
+                <li><a href="#">Fale conosco</a></li>
+                <li><a href="#">Carreiras</a></li>
+                <li><a href="#">Entregadores</a></li>
+            </ul>
+            <ul>
+                <li><strong>Descubra</strong></li>
+                <li><a href="#">Cadastre seu Restaurante ou Mercado</a></li>
+                <li><a href="#">iFood Shop</a></li>
+                <li><a href="#">iFood Card</a></li>
+                <li><a href="#">Blog iFood Empresas</a></li>
+            </ul>
+            <ul>
+                <li><strong>Social</strong></li>
+                <div id="midias">
+                    <li><a href="#"><img src="./assets/facebook.svg" height="30" width="30"></a></li>
+                    <li><a href="#"><img src="./assets/twitter.svg" height="30" width="30"></a></li>
+                    <li><a href="#"><img src="./assets/instagram.svg" height="30" width="30"></a></li>
+                    <li><a href="#"><img src="./assets/youtube.svg" height="30" width="30"></a></li>
+                </div>
+            </ul>
+            <div class="separador"></div>
+        </section>
+
+        <section class="copyr">
+            <ul>
+                <li><img src="./assets/ifoodicon.png" alt="Logo marca iFood" width="50" height="50"></li>
+                <li>
+                    <small>
+                        <p>© Copyright 2021 - iFood - Todos os direitos reservados iFood com
+                        Agência de Restaurantes Online S.A.</p>
+                        <p>CNPJ 14.380.200/0001-21 / Avenida dos Autonomistas, nº 1496, Vila Yara, 
+                        Osasco/SP - CEP 06.020-902</p>
+                    </small>
+                </li>
+                <li><a href="#">Termo e condições de uso</a></li>
+                <li><a href="#">Código de conduta</a></li>
+                <li><a href="#">Privacidade</a></li>
+                <li><a href="#">Dicas de segurança</a></li>
+            </ul>
+        </section>
+    </footer>
 
     <script src="script.js"></script>
 </body>
