--- a/paginaPrincipal/site.html
+++ b/paginaPrincipal/site.html
@@ -22,22 +22,22 @@
             <i class="fas fa-bars" id="hamburguer"></i>
             <ul class="menu-lista">
                 <li><img src="./assets/logo.svg" alt="Logo IFood"></li>
-                <li class="invisivel menu-inv">
+                <li class="invisivel">
                     <p>Entregador</p>
                 </li>
-                <li class="invisivel menu-inv">
+                <li class="invisivel">
                     <p>Restaurante e Mercado</p>
                 </li>
-                <li class="invisivel menu-inv">
+                <li class="invisivel">
                     <p>Carreiras</p>
                 </li>
-                <li class="invisivel menu-inv">
+                <li class="invisivel">
                     <p>iFood Card</p>
                 </li>
             </ul>
 
             <ul>
-                <li class="invisivel">
+                <li class="invisivel" id="criarconta">
                     <p>criar conta</p>
                 </li>
                 <li id="entrar">
@@ -246,8 +246,7 @@
         <section class="rodape-sobre">
             <ul>
                 <li><strong>iFood</strong></li>
-                <li><a href="#">Site Institucional</a>
-                </li>
+                <li><a href="#">Site Institucional</a></li>
                 <li><a href="#">Fale conosco</a></li>
                 <li><a href="#">Carreiras</a></li>
                 <li><a href="#">Entregadores</a></li>
