--- a/paginaInstitucional/index.html
+++ b/paginaInstitucional/index.html
@@ -143,42 +143,55 @@
                 <li class="brok">Termo de Ajustamento de Conduta</li>
                 <li class="brok">Privacidade e Proteção de Dados</li>
             </ul>
-            <ul>
-                <li>Comunidade</li>
-                <li>Parceiros</li>
-                <li>Entregadores</li>
-                <li>Clientes</li>
-                <li>Carreiras</li>
-                <li>iFood Labs</li>
-            </ul>
-            <ul>
-                <li>Sustentabilidade</li>
-                <li>Meio Ambiente</li>
-                <li>Impacto Social</li>
-                <li>Governança</li>
-                <li>Nossos Relatórios</li>
-            </ul>
-            <ul>
-                <li>iFood News</li>
-                <li>Preciso de Ajuda</li>
-                <li>Entregadores</li>
-                <li>Restaurantes</li>
-                <li>Estudos e Pesquisas</li>
-                <li>Mais Notícias</li>
-            </ul>
-            <div id="redesapp">
+            <div class="organiza">
                 <ul>
-                    <li>Redes sociais</li>
-                    <li><img src="./assets/faceicon.svg" width="20" height="20">Facebook</li>
-                    <li><img src="./assets/twittericon.svg" width="20" height="20">Twitter</li>
-                    <li><img src="./assets/youtubeicon.svg" width="20" height="20">Youtube</li>
-                    <li><img src="./assets/instagramicon.svg" width="20" height="20">Instagram</li>
+                    <li>Comunidade</li>
+                    <li>Parceiros</li>
+                    <li>Entregadores</li>
+                    <li>Clientes</li>
+                    <li>Carreiras</li>
+                    <li>iFood Labs</li>
                 </ul>
                 <ul>
-                    <li>Baixe o App</li>
-                    <li><img src="./assets/appstoreicon.svg" width="20" height="20">App Store</li>
-                    <li><img src="./assets/playstoreicon.svg" width="20" height="20">Google Play</li>
+                    <li>Sustentabilidade</li>
+                    <li>Meio Ambiente</li>
+                    <li>Impacto Social</li>
+                    <li>Governança</li>
+                    <li>Nossos Relatórios</li>
                 </ul>
+            </div>
+            <div class="organizar">
+                <ul>
+                    <li>iFood News</li>
+                    <li>Preciso de Ajuda</li>
+                    <li>Entregadores</li>
+                    <li>Restaurantes</li>
+                    <li>Estudos e Pesquisas</li>
+                    <li>Inovação</li>
+                    <li>Mais Notícias</li>
+                </ul>
+                <div id="redesapp">
+                    <ul>
+                        <li>Redes sociais</li>
+                        <li><img src="./assets/faceicon.svg" width="20" height="20">Facebook</li>
+                        <li><img src="./assets/twittericon.svg" width="20" height="20">Twitter</li>
+                        <li><img src="./assets/youtubeicon.svg" width="20" height="20">Youtube</li>
+                        <li><img src="./assets/instagramicon.svg" width="20" height="20">Instagram</li>
+                    </ul>
+                    <ul>
+                        <li>Baixe o App</li>
+                        <li><img src="./assets/appstoreicon.svg" width="20" height="20">App Store</li>
+                        <li><img src="./assets/playstoreicon.svg" width="20" height="20">Google Play</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <img src="./assets/logoifoodbranco.svg" alt="Logo IFood">
+                <p>© Copyright 2023 - iFood - Todos os direitos reservados iFood com Agência de Restaurantes Online S.A.
+                    CNPJ 14.380.200/0001-21</p>
             </div>
         </section>
     </footer>
