--- a/paginaInstitucional/index.html
+++ b/paginaInstitucional/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <header>
+    <header class="menu-header">
         <nav class="barra">
             <ul class="menu-lista">
-                <li><img src="./assets/logoifoodbranco.svg" alt="Logo IFood" width="60" height="60"></li>
+                <li><img id="iminv" src="./assets/logoifoodred.svg" alt="Logo IFood" width="60" height="60"></li>
                 <li class="invisivel" onmouseover="showOptions('op1')" onmouseout="hideOptions('op1')">
                     <p>Sobre nós</p>
                 </li>
@@ -54,7 +54,7 @@
                 </li>
             </ul>
 
-            <button>Pede iFood Já!</button>
+            <button class="bot">Pede iFood Já!</button>
             <i class="fas fa-bars" id="hamburguer"></i>
         </nav>
 
